# sura_localization

./: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
config/: ekf_auv.yaml  ekf_imu_only.yaml  ekf_with_depth.yaml
launch/: auv_localization.launch.py  localization.launch.py
resource/: sura_localization
src/: enu_to_ned_odometry.cpp  ned_to_enu_imu.cpp  pressure_to_pose.cpp
sura_localization/: __init__.py  enu_to_ned_odometry.py  ned_to_enu_imu.py  pressure_to_pose.py
